Refactor mining prospect handling into MiningService
Removed ProspectedAsteroidRegistry and migrated its functionality to MiningService for a more cohesive and centralized approach. Adjusted related classes and handlers to work with MiningService, simplifying code and improving maintainability. Deprecated unused deserializers, serializers, and event data models associated with mining.